[gd_scene load_steps=38 format=3 uid="uid://cy1j0tecrrsw0"]

[ext_resource type="Script" uid="uid://d3tixetmu2jdx" path="res://script/vaca.gd" id="1_2e5w4"]
[ext_resource type="Texture2D" uid="uid://c0oeveav2tu7k" path="res://Graficos/vaca/idle/IdleVacafrente.png" id="1_mamiw"]
[ext_resource type="Texture2D" uid="uid://den0puqng727p" path="res://Graficos/vaca/caminar/walkVacaFrente.png" id="2_bid8m"]
[ext_resource type="Texture2D" uid="uid://m2eo4cafy310" path="res://Graficos/vaca/caminar/WalkVacaa.png" id="4_t5k7b"]
[ext_resource type="Texture2D" uid="uid://cpywngumh7f7s" path="res://Graficos/vaca/caminar/walkVacaAtras.png" id="5_e0kv3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dicl1"]
atlas = ExtResource("2_bid8m")
region = Rect2(51, 30, 51, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5k7b"]
atlas = ExtResource("2_bid8m")
region = Rect2(102, 30, 51, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0kv3"]
atlas = ExtResource("2_bid8m")
region = Rect2(153, 30, 51, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_3sn8a"]
atlas = ExtResource("2_bid8m")
region = Rect2(204, 30, 51, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1j8q"]
atlas = ExtResource("2_bid8m")
region = Rect2(255, 30, 51, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kibw"]
atlas = ExtResource("2_bid8m")
region = Rect2(306, 30, 51, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1ir2"]
atlas = ExtResource("2_bid8m")
region = Rect2(357, 30, 51, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_puhes"]
atlas = ExtResource("2_bid8m")
region = Rect2(408, 30, 51, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_2e5w4"]
atlas = ExtResource("1_mamiw")
region = Rect2(51, 26, 51, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_77biq"]
atlas = ExtResource("1_mamiw")
region = Rect2(102, 26, 51, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_geax5"]
atlas = ExtResource("1_mamiw")
region = Rect2(153, 26, 51, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yyru"]
atlas = ExtResource("1_mamiw")
region = Rect2(204, 26, 51, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_cur4n"]
atlas = ExtResource("4_t5k7b")
region = Rect2(51, 30, 51, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0e7r"]
atlas = ExtResource("4_t5k7b")
region = Rect2(102, 30, 51, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_tra2m"]
atlas = ExtResource("4_t5k7b")
region = Rect2(153, 30, 51, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_kydmc"]
atlas = ExtResource("4_t5k7b")
region = Rect2(204, 30, 51, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_rih4a"]
atlas = ExtResource("4_t5k7b")
region = Rect2(255, 30, 51, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gxby"]
atlas = ExtResource("4_t5k7b")
region = Rect2(306, 30, 51, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8nsp"]
atlas = ExtResource("4_t5k7b")
region = Rect2(357, 30, 51, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_mndh8"]
atlas = ExtResource("4_t5k7b")
region = Rect2(408, 30, 51, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_um003"]
atlas = ExtResource("5_e0kv3")
region = Rect2(51, 30, 51, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_mklef"]
atlas = ExtResource("5_e0kv3")
region = Rect2(102, 30, 51, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5xmi"]
atlas = ExtResource("5_e0kv3")
region = Rect2(153, 30, 51, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5hci"]
atlas = ExtResource("5_e0kv3")
region = Rect2(204, 30, 51, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_58ngy"]
atlas = ExtResource("5_e0kv3")
region = Rect2(255, 30, 51, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cve8"]
atlas = ExtResource("5_e0kv3")
region = Rect2(306, 30, 51, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifa35"]
atlas = ExtResource("5_e0kv3")
region = Rect2(357, 30, 51, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgu2d"]
atlas = ExtResource("5_e0kv3")
region = Rect2(408, 30, 51, 33)

[sub_resource type="SpriteFrames" id="SpriteFrames_wplfm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dicl1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5k7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0kv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3sn8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1j8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kibw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1ir2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_puhes")
}],
"loop": true,
"name": &"vaca-down",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2e5w4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77biq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_geax5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yyru")
}],
"loop": true,
"name": &"vaca-idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cur4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0e7r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tra2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kydmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rih4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gxby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8nsp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mndh8")
}],
"loop": true,
"name": &"vaca-side",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_um003")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mklef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5xmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5hci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58ngy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cve8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifa35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgu2d")
}],
"loop": true,
"name": &"vaca-up",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ap7kk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mamiw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2e5w4"]
radius = 50.0

[node name="vaca" type="CharacterBody2D" groups=["vaca"]]
collision_layer = 18
collision_mask = 34
floor_block_on_wall = false
script = ExtResource("1_2e5w4")

[node name="vacaSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wplfm")
animation = &"vaca-idle"

[node name="AreaTerminarNivel" type="Area2D" parent="."]
position = Vector2(-1, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaTerminarNivel"]
shape = SubResource("RectangleShape2D_ap7kk")

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_mamiw")

[node name="AreaMartinOCaucho" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaMartinOCaucho"]
shape = SubResource("CircleShape2D_2e5w4")

[connection signal="body_entered" from="AreaMartinOCaucho" to="." method="_on_area_martin_o_caucho_body_entered"]
[connection signal="body_exited" from="AreaMartinOCaucho" to="." method="_on_area_martin_o_caucho_body_exited"]
